# rrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makeRelease.py
libs/libdxfrw/: CMakeLists.txt
libs/libdxfrw/dwg2dxf/: CMakeLists.txt  main.cpp
libs/libdxfrw/dwg2text/: CMakeLists.txt
libs/libdxfrw/src/: CMakeLists.txt  dx_iface.cpp  dx_iface.h  libdxfrw.cpp  libdxfrw.h
libs/libdxfrw/src/intern/: drw_textcodec.cpp
libs/libzip/: CMakeLists.txt
libs/sqlite/: CMakeLists.txt
src/: CMakeLists.txt  cadastralnumber.cpp  cadastralnumber.h  common.h  compare.cpp  compare.h  db.cpp  db.h  dxf.cpp  dxf.h  idb.cpp  idb.h  main.cpp  point.cpp  point.h  rect.cpp  rect.h  rrtzip.cpp  rrtzip.h  spatial.cpp  spatial.h  sqldb.cpp  sqldb.h  standardparser.cpp  standardparser.h  xml.cpp  xml.h  xmlcadastralnumber.cpp  xmlcadastralnumber.h  xmlcadastralnumberinfo.cpp  xmlcadastralnumberinfo.h  xmlinfo.cpp  xmlinfo.h  xmlparser.cpp  xmlparser.h  xmlpoint.cpp  xmlpoint.h  xmlspatial.cpp  xmlspatial.h  xmlspatialinfo.cpp  (+1 more)
src/gui/: CMakeLists.txt  dxflabel.cpp  dxflabel.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  metatypes.h  typedefs.h  updater.cpp  updater.h  util.cpp  util.h  vecstr.cpp  vecstr.h  xmlroottreeitem.cpp  xmlroottreeitem.h  xmltreebuttons.cpp  xmltreebuttons.h  xmltreedelegate.cpp  xmltreedelegate.h  xmltreeitem.cpp  xmltreeitem.h  xmltreemodel.cpp  xmltreemodel.h  xmltreesortfilterproxymodel.cpp  xmltreesortfilterproxymodel.h  xmltreeview.cpp  xmltreeview.h
src/gui/rc/: rrt.rc
src/gui/resources/: resources.qrc
src/gui/ts/: ru.ts
tests/: CMakeLists.txt  CMakeLists.txt.in  boost_tests.h  cadastralnumber_tests.h  dxf_tests.h  intersects_tests.h  rect_tests.h  rrtzip_tests.h  serialize_tests.h  sqllite_tests.h  tests.cpp  xml_tests.h
tests_data/: KPT CadastralBlock 77 03 0009007.dwg  KPT CadastralBlock 77 03 0009007.dxf  KPT CadastralBlock 77 03 0009007.xml  KVZU Parcel 21 01 010206 115.dxf  KVZU Parcel 21 01 010206 115.xml  intersects_false.dwg  intersects_false.dxf  intersects_true1.dwg  intersects_true1.dxf  intersects_true2.dwg  intersects_true2.dxf  intersects_true3.dwg  intersects_true3.dxf  poly.dwg  poly.dxf  г14 21 01 011102 234.dxf  г14 21 01 011102 234.xml
